# CloudFlow

./: TASK.md  TO_IMPROVE.md  package-lock.json  package.json  proxy.ts
CF-BRUNO/: opencollection.yml
app/actions/: auth.ts  emails.ts  gmail.ts
app/api/gmail/: route.ts
app/auth/callback/: route.ts
app/dashboard/: page.tsx
app/login/: page.tsx
backend/: main.py  pyproject.toml
backend/core/: config.py  database.py  dependencies.py  logger.py  oauth_config.py
backend/lib/: email_processor.py
backend/queries/: emails.py  user_tokens.py
backend/repositories/: user_tokens_repo.py
backend/routers/: actions.py  auth.py  emails.py  gmail.py
backend/schemas/: provider_token_schema.py
backend/services/: auth_service.py  email_service.py  gmail_service.py
backend/supabase/: client.py
components/auth/: SignInButton.tsx
components/dashboard/: GmailButton.tsx
components/icons/: GoogleIcon.tsx
context/: AuthContext.tsx
lib/: api.ts  types.ts
lib/supabase/: client.ts  server.ts  userToken.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260304083609_create_user_tokens_table.sql
utils/: get-user.ts
