[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "google-api-python-client>=2.191.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.3.0",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
